--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   formz: ^0.7.0
   go_router: ^6.2.0
   google_fonts: ^4.0.3
+  image_picker: ^1.1.1
   shared_preferences: ^2.2.3
 
 dev_dependencies:
